# Credit-Risk-Modeling

./: README.md  app.py  app_csvonly.py  app_withsnap.py  pyproject.toml
.ipynb_checkpoints/: app-checkpoint.py  pyproject-checkpoint.toml
model/: baseline_model_20251020_113604.pkl  feature_info.pkl
notebook/: model_metadata_20251020_113604.json  performance_metrics_20251020_113604.json  scaler_for_streamlit.pkl
notebook/.ipynb_checkpoints/: deployment_script_20251020_113604.py
